--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,15 @@
 @import "tailwindcss";
 
+* {
+  cursor: url('@/assets/images/cursor-you.svg'), auto;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@theme inline {
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
